Bug #42424, "Serious performance degradation after new scavenger"

Several fixes for the Scavenger:

1. Don't run updateCardinalities() in a low memory state
2. Distinguish between scheduled and load-based or 'forced' scavenges
3. Progessively increase the time that record alloc waits for a scavenge
4. Retire records during a low memory state, even if active memory is
   below the cache threshold